--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "5.3.0",
+    "redux-saga": "^1.1.3",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
-    "redux": "^4.0.5",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
